--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.3
   firebase_auth: ^5.1.0
   auto_size_text: ^3.0.0
+  dropdown_model_list: ^2.1.2
 
 dev_dependencies:
   flutter_test:
